--- a/Sboard/src/main/resources/application.properties
+++ b/Sboard/src/main/resources/application.properties
@@ -40,3 +40,10 @@ logging.level.jdbc.resultsettable=info
 logging.level.jdbc.connection=info
 logging.level.org.hibernate=info
 logging.level.org.springframework.security=info
+
+#############################################
+#파일 업로드 설정
+#############################################
+spring.servlet.multipart.location=src/main/resources/file
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
