--- a/Sboard/src/main/resources/application.properties
+++ b/Sboard/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.servlet.context-path=/Sboard
-server.port=8080
+server.port=8181
 spring.thymeleaf.cache=false
 
 #Mybatis 설정
 
 #데이터베이스 정보
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/java2_board
+spring.datasource.url=jdbc:mysql://54.180.9.166:3306/java2_board
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=whwaksdk1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #MyBatis Mapper 경로설정 -> Ch06Application 클래스 상단에 @MapperScan("kr.co.ch06.persistence") 추가
@@ -44,6 +44,11 @@ logging.level.org.springframework.security=info
 #############################################
 #파일 업로드 설정
 #############################################
-spring.servlet.multipart.location=src/main/resources/file
+spring.servlet.multipart.location=file/
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
+
+#############################################
+#에러 페이지 설정
+#############################################
+server.error.whitelabel.enabled=false
