--- a/Farmstory/build.gradle
+++ b/Farmstory/build.gradle
@@ -31,8 +31,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-	// livereload 설정
-	compile("org.springframework.boot:spring-boot-devtools")
+	// 이메일 인증 API
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.7.8'
+
 }
 
 tasks.named('test') {
