--- a/Voard/src/main/resources/application.properties
+++ b/Voard/src/main/resources/application.properties
@@ -1,18 +1,18 @@
-# 기본 개발설정
-server.servlet.context-path=/Voard
-server.port=8080
+# \uAE30\uBCF8 \uAC1C\uBC1C\uC124\uC815
+server.servlet.context-path=/
+server.port=8787
 spring.thymeleaf.cache=false
 
-# DataSource 설정
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/java2_board
+# DataSource \uC124\uC815
+spring.datasource.url=jdbc:mysql://43.201.52.94:3306/java2_board
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=whwaksdk1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# MyBatis Mapper 경로설정
+# MyBatis Mapper \uACBD\uB85C\uC124\uC815
 mybatis.mapper-locations=classpath:mappers/**/*.xml
 
-# JPA 설정
+# JPA \uC124\uC815
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -20,19 +20,19 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.hibernate.ddl-auto=update
 
 #############################################
-#log 설정
+#log \uC124\uC815
 #############################################
-#전체 로그 레벨
+#\uC804\uCCB4 \uB85C\uADF8 \uB808\uBCA8
 logging.level.root=info
 
-#패키지별 로그 레벨
+#\uD328\uD0A4\uC9C0\uBCC4 \uB85C\uADF8 \uB808\uBCA8
 #logging.level.kr.co.ch10.controller=info
 #logging.level.kr.co.ch10.service=info
 
-#로그 파일 경로("/" 로 시작하지 말것)
+#\uB85C\uADF8 \uD30C\uC77C \uACBD\uB85C("/" \uB85C \uC2DC\uC791\uD558\uC9C0 \uB9D0\uAC83)
 logging.file.name=log/Voard.log
 
-#추가 로그 설정
+#\uCD94\uAC00 \uB85C\uADF8 \uC124\uC815
 #logging.level.jdbc.sqlonly=debug
 #logging.level.jdbc.sqltiming=debug
 #logging.level.jdbc.resultsettable=debug
@@ -40,7 +40,7 @@ logging.file.name=log/Voard.log
 #logging.level.org.springframework.security=info
 
 #############################################
-#파일 업로드 설정
+#\uD30C\uC77C \uC5C5\uB85C\uB4DC \uC124\uC815
 #############################################
 spring.servlet.multipart.location=file/
 spring.servlet.multipart.max-file-size=10MB
