--- a/Voard/src/main/resources/application.properties
+++ b/Voard/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.thymeleaf.cache=false
 
 # DataSource \uC124\uC815
 spring.datasource.url=jdbc:mysql://43.201.52.94:3306/java2_board
-spring.datasource.username=root
-spring.datasource.password=whwaksdk1
+spring.datasource.username=asdf
+spring.datasource.password=myCommonPassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # MyBatis Mapper \uACBD\uB85C\uC124\uC815
